--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,64 +1,53 @@
-.banner {
-  width: 100%;
-  height: 400px;
+.posts {
+  margin-top:2em;
+
+  > a {
+    display:block;
+  }
+
+  a + a {
+    margin-top: 3rem;
+  }
+
+  button {
+    border:none;
+    background:transparent;
+    font-weight:600;
+    font-size: 1.125rem;
+    color:var(--highlight);
+    margin-top:4rem;
+  }
+
 }
 
-.postContainer {
-  max-width: 720px;
-  margin: 2rem auto;
+.post {
 
   strong {
-    font-size: 1.8rem;
-    font-weight: 700;
-    line-height: 3rem;
+    font-size:1.75rem;
+    font-weight: bold;
+    color:var(--heading);
   }
-}
 
-.postInfo {
-  margin: 1rem 0;
-  color: var(--gray-300);
-  display: flex;
-  align-items: center;
+  p{
+    margin-top:0.5rem;
+    font-size:1.125rem;
+  }
 
-  time {
+  ul {
+    list-style: none;
+    margin-top:1.5rem;
     display: flex;
-    align-items: center;
-    margin-right: 1rem;
 
-    svg {
-      margin: 0 0.4rem 0 0;
+    & li {
+      font-size:0.875rem;
+
+      & svg {
+        margin-right: 0.5rem;
+      }
+
+      & + li {
+        margin-left: 1.625rem;
+      }
     }
-  }
-
-  span {
-    display: flex;
-    align-items: center;
-    margin-right: 1rem;
-
-    svg {
-      margin: 0 0.4rem 0 0;
-    }
-  }
-}
-
-.postContent {
-  margin-top: 3rem;
-  max-width: 720px;
-
-  div {
-    margin-top: 2rem;
-    max-width: 720px;
-  }
-
-  strong {
-    font-size: 2.2rem;
-    color: var(--gray-50);
-  }
-
-  p {
-    margin-top: 1rem;
-    font-size: 1.2rem;
-    text-align: justify;
-    color: var(--gray-300);
   }
 }
