--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,21 +1,45 @@
 * {
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
   margin: 0;
   padding: 0;
 }
 
+:root {
+  --highlight: #FF57B2;
+  --heading: #F8F8F8;
+  --background:#1A1D23;
+  --info:#BBBBBB;
+  --body:#D7D7D7;
+  --border: #282C34;
+}
+
 body {
-  background: #1a1d23;
-  color: #f8f8f8;
+  background:var(--background);
+  color:var(--body)
 }
 
-a {
-  color: #f8f8f8;
-  text-decoration: none;
+@media (max-width:1080px) {
+  html {
+    font-size: 93.75%;
+  }
 }
 
-a,
+@media (max-width:720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body, input, textarea, button, select {
+  font: 400 1rem "Inter", sans-serif;
+}
+
 button {
   cursor: pointer;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
